2008-02-29  Katsutoshi Itoh <cut-sea@kahua.org>

	* Change: modify client side data binding methodology.
	          new kahua server side binding.
	* Change: str->alist ,which is internal defined function of
	          %client-context-alist perform at just first time
	          aim to performance.
	* Change: optimize javascript a little.
	          remove useless values from query-string.
	
	
2008-02-28  Katsutoshi Itoh <cut-sea@kahua.org>

	* Change: add kahua-client-context-ref,kahua-client-context-ref*.
	* Change: add 'keep' clause for @@ auxs.
	          which is for auto keep client context data.
	* Proposal: require 'x-kahua-*' prefix words and 'x_kahua_' prefix words
	            and '__x_kahua_' prefix words are reserved word on Kahua.
	            Now, using javascript function name and hidden tag name.
	
2008-02-15  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/protocol/http.scm
	  When httpd dit not use non-vhost configuration and run CGI/FCGI bridge,
	  Kahua built some wrong URI. Fixed it.  This patch from Shiro Kawai.

2008-02-13  Katsutoshi Itoh <cut-sea@kahua.org>

	* Change: add explain for @@:,@@/,
	  which is translated from server.kahua .
	
2008-02-12  Katsutoshi Itoh <cut-sea@kahua.org>

	* Change: src/kahua/server.scm
	  Partially update node(html parts).
	  patch for %a/cont-handler,%form/cont-handler.
	  and add local-parts like as local-cont procedure.
	* Add: test/multi-paging.kahua
	       test/multi-paging.scm
	  add test code for a/cont,form/cont's new attribute('parts-cont').
	* Change: add explain comment for this modify.

2008-02-11  ENDO Yasuyuki  <yasuyuki@javaopen.org>

	* cgi/kahua.cgi.in (cgi-error-proc): use current-error-page instead of default-error-page.

2008-02-10  ENDO Yasuyuki  <yasuyuki@javaopen.org>

	* src/kahua/protocol/http.scm (current-error-page): add.
	(kahua.protocol.http): use kahua.config.
	(kahua.protocol.http): export current-error-apge instead of default-error.page.
